--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
     <style>
         #div1 {
             align-items: center;
-            top: 37%;
+            top: 20%;
             /* bottom: 48%; */
             position: relative;
             left: 9%;
         }
 
         body {
-            background: url("honeywell.webp");
+            background: url("honeywell1.jpg");
             overflow: hidden;
         }
     </style>
 </head>
 
 <body>
-    <marquee behavior="scroll" direction="left" scrollamount="5">
-        <img src="honeywell.jpg" width="100%" height="35%%" alt="Natural" />
-    </marquee>
+    <div style="font-size: xx-large; color: red; text-align: center; font-weight: bolder; text-shadow: 2px 2px;">
+        HBT TECHFEST 2021 LIVE EVENT DASHBOARD
+    </div>
+    <!-- <marquee behavior="scroll" direction="left" scrollamount="5"> -->
+    <img src="honeywell.jpg" width="100%" height="35%%" alt="Natural" style="position: relative;top: 10%;" />
+    <!-- </marquee> -->
     <div id="div1">
         <embed type="text/html"
             src="https://forms.office.com/Pages/AnalysisPage.aspx?id=JuXsln2csEiNr4uTyQpdGB0gnNfi0ZZLhFQQfJ03ns5URTVFWVpYQk1CM0VRT1IzMjdMQUpBR0hDMy4u&AnalyzerToken=ExTrklT2Zebl2oTOcILxHaxjgpgSGIaR"
