--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         HBT TECHFEST 2021 LIVE EVENT DASHBOARD
     </div>
     <!-- <marquee behavior="scroll" direction="left" scrollamount="5"> -->
-    <img src="honeywell.jpg" width="100%" height="35%%" alt="Natural" style="position: relative;top: 10%;" />
+    <!-- <img src="honeywell.jpg" width="100%" height="35%%" alt="Natural" style="position: relative;top: 10%;" /> -->
     <!-- </marquee> -->
     <div id="div1">
         <embed type="text/html"
